--- a/packages/rma-frontend/src/app/stock-entry/material-transfer/material-transfer.component.html
+++ b/packages/rma-frontend/src/app/stock-entry/material-transfer/material-transfer.component.html
@@ -115,7 +115,7 @@
                               required
                               matInput
                               [matDatepicker]="postingDate"
-                              placeholder="Due Date"
+                              placeholder="Posting Date"
                               formControlName="posting_date"
                               (dateChange)="updateItemStock()"
                             />
