feat(rma-frontend): Vouchers now have option to open in new tab on Purchase page, Sales Return page and Stock Entry List page

--- a/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.html
+++ b/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.html
@@ -174,7 +174,7 @@
                 Invoice No.
               </mat-header-cell>
               <mat-cell *matCellDef="let row">
-                {{row.name}}
+                <a [routerLink]="['/purchase/view-purchase-invoice',row.uuid]" >{{row.name}}</a>
               </mat-cell>
               <mat-footer-cell *matFooterCellDef></mat-footer-cell>
             </ng-container>
