--- a/packages/rma-frontend/src/app/sales-ui/sales-return/sales-return.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales-return/sales-return.page.html
@@ -124,7 +124,11 @@
             <!-- DN Name Column -->
             <ng-container matColumnDef="name">
               <mat-header-cell *matHeaderCellDef>DN name</mat-header-cell>
-              <mat-cell *matCellDef="let row">{{ row.name }}</mat-cell>
+              <mat-cell *matCellDef="let row"
+                ><a [routerLink]="['/sales-return/details',row.uuid]"
+                  >{{row.name}}</a
+                ></mat-cell
+              >
               <mat-footer-cell *matFooterCellDef></mat-footer-cell>
             </ng-container>
 
@@ -141,9 +145,7 @@
             <ng-container matColumnDef="title">
               <mat-header-cell *matHeaderCellDef>Title</mat-header-cell>
               <mat-cell *matCellDef="let row">{{ row.title }}</mat-cell>
-              <mat-footer-cell *matFooterCellDef>
-                Total
-              </mat-footer-cell>
+              <mat-footer-cell *matFooterCellDef> Total </mat-footer-cell>
             </ng-container>
 
             <!-- Total Column -->
@@ -160,7 +162,10 @@
             <!-- Status Column -->
             <ng-container matColumnDef="status">
               <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
-              <mat-cell *matCellDef="let row" [ngStyle]="{color: row.docstatus === 1 ? 'red' : 'brown'}">
+              <mat-cell
+                *matCellDef="let row"
+                [ngStyle]="{color: row.docstatus === 1 ? 'red' : 'brown'}"
+              >
                 {{ row.docstatus === 1 ? 'Returned' : 'Canceled' }}
               </mat-cell>
               <mat-footer-cell *matFooterCellDef></mat-footer-cell>
