feat(Excel-rma): Add territory and warehouse permission to stock
update UI component for sales and purchase listing

--- a/packages/rma-frontend/src/app/common/components/delivered-serials/delivered-serials.component.html
+++ b/packages/rma-frontend/src/app/common/components/delivered-serials/delivered-serials.component.html
@@ -44,7 +44,11 @@
     <div *ngFor="let cell of deliveredSerialsState?.deliveredSerialsDisplayedColumns">
         <ng-container  *ngIf="cell !== 'sr_no'" [matColumnDef]="cell">
                 <mat-header-cell *matHeaderCellDef > {{cell}}</mat-header-cell>
-                <mat-cell *matCellDef="let row">{{row[cell]}}</mat-cell>
+                <mat-cell *matCellDef="let row">
+                    <div>
+                        {{ getDateCell(cell) ? (row[cell] | date: 'd MMM, y') : row[cell]}}
+                    </div>
+                </mat-cell>
         </ng-container>
     </div>
         
