--- a/packages/rma-frontend/src/app/sales-ui/sales-return/sales-return.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales-return/sales-return.page.html
@@ -132,7 +132,7 @@
             <ng-container matColumnDef="posting_date">
               <mat-header-cell *matHeaderCellDef>Posting Date</mat-header-cell>
               <mat-cell *matCellDef="let row">
-                {{ row.posting_date | date:'dd-MM-yyyy' }}
+                {{ row.posting_date | date: 'd MMM, y' }}
               </mat-cell>
               <mat-footer-cell *matFooterCellDef></mat-footer-cell>
             </ng-container>
