--- a/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.scss
+++ b/packages/rma-frontend/src/app/purchase-ui/purchase/purchase.page.scss
@@ -55,3 +55,10 @@
   flex: 0 0 5% !important;
   min-width: 10px !important;
 }
+.right-margin{
+  margin-right: 1em
+}
+
+::ng-deep .mat-progress-bar-fill::after {
+  background-color: green;
+}
