--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.scss
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.scss
@@ -37,3 +37,11 @@
   flex: 0 0 5% !important;
   min-width: 10px !important;
 }
+
+.right-margin{
+  margin-right: 1em
+}
+
+::ng-deep .mat-progress-bar-fill::after {
+  background-color: green;
+}
