--- a/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.html
+++ b/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.html
@@ -230,7 +230,7 @@
               Posting Date
             </mat-header-cell>
             <mat-cell *matCellDef="let row">
-              {{row.posting_date | date:'dd-MM-yyyy'}}
+              {{row.posting_date | date: 'd MMM, y'}}
             </mat-cell>
             <mat-footer-cell *matFooterCellDef></mat-footer-cell>
           </ng-container>
