feat(rma-warranty): Clear filter button added on Serial Search page

--- a/packages/rma-warranty/src/app/serial-ui/serial-search/serial-search.page.html
+++ b/packages/rma-warranty/src/app/serial-ui/serial-search/serial-search.page.html
@@ -88,6 +88,17 @@
               <mat-checkbox formControlName="purchase_invoice_name" >Purchased</mat-checkbox>
             </ion-col>
           </ion-row>
+          <ion-row>
+            <ion-col>
+            <ion-button
+                color="tertiary"
+                (click)="clearFilters()"
+                fill="outline"
+              >
+                Clear
+              </ion-button>
+            </ion-col>
+          </ion-row>
         </form>
       </ion-grid>
 
