--- a/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.html
+++ b/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.html
@@ -123,6 +123,24 @@
             </ion-col>
           </ion-row>
           <ion-row>
+            <ion-col>
+              <mat-form-field class="full-width">
+                <mat-label>Stock Entry Type</mat-label>
+                <mat-select
+                  formControlName="status"
+                  (selectionChange)="setStockEntryType($event.value)"
+                >
+                  <mat-option
+                    *ngFor="let type of stockEntryType"
+                    [value]="type"
+                  >
+                    {{type}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </ion-col>
+          </ion-row>
+          <ion-row>
             <ion-col class="ion-text-center">
               <ion-text color="medium" class="date-filter-text">
                 Range Date
@@ -235,6 +253,16 @@
             <mat-footer-cell *matFooterCellDef></mat-footer-cell>
           </ng-container>
 
+          <ng-container matColumnDef="stockEntryType">
+            <mat-header-cell *matHeaderCellDef mat-sort-header="stockEntryType">
+              Type
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+              {{row.stock_entry_type}}
+            </mat-cell>
+            <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+          </ng-container>
+          
           <ng-container matColumnDef="createdBy">
             <mat-header-cell *matHeaderCellDef mat-sort-header="supplier">
               Created By
