feat(Excel-rma): Update permissions for backend and UI components Stock Availability: - add Item Name should be there instead item_code, - Warehouse should be auto-complete only from territory, filters Brand:field_name=excel_brand,  Item Group: field_name=excel_item_group
update permissions for relay warehouse list

update list only clickable on voucher no and not row.

stock entry add button to check for any type create.

--- a/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.html
+++ b/packages/rma-frontend/src/app/stock-entry/stock-entry-list/stock-entry-list.page.html
@@ -20,7 +20,10 @@
         </ion-col>
         <ion-col class="ion-text-right">
           <ion-button
-            [disabled]="!permissionState.stock_entry.create"
+            [disabled]="!permissionState.stock_entry.create || 
+            !permissionState.stock_entry_receipt.create || 
+            !permissionState.stock_entry_issue.create || 
+            !permissionState.stock_entry_rnd.create"
             color="tertiary"
             [routerLink]="['/material-transfer']"
           >
@@ -292,7 +295,6 @@
           ></mat-header-row>
           <mat-row
             *matRowDef="let row; columns: displayedColumns;"
-            [routerLink]="['/material-transfer/',row.uuid]"
           >
           </mat-row>
           <mat-footer-row
