feat(rma-frontend): Sales Return voucher route fixed

--- a/packages/rma-frontend/src/app/sales-ui/sales-return/sales-return.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales-return/sales-return.page.html
@@ -125,7 +125,7 @@
             <ng-container matColumnDef="name">
               <mat-header-cell *matHeaderCellDef>DN name</mat-header-cell>
               <mat-cell *matCellDef="let row"
-                ><a [routerLink]="['/sales-return/details',row.uuid]"
+                ><a [routerLink]="['/sales-return/details',row.name]"
                   >{{row.name}}</a
                 ></mat-cell
               >
