--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/status-history/status-history.component.html
@@ -362,11 +362,7 @@
             "
           >
             <input
-              [value]="
-                warrantyObject?.replace_warehouse?.length
-                  ? warrantyObject.replace_warehouse[0]
-                  : ''
-              "
+              [value]="warrantyObject?.replace_warehouse"
               matInput
               type="text"
               disabled
@@ -378,11 +374,7 @@
           <mat-form-field class="example-full-width">
             <input
               matInput
-              [value]="
-                warrantyObject?.damage_warehouse?.length
-                  ? warrantyObject.damage_warehouse[0]
-                  : ''
-              "
+              [value]="warrantyObject?.damage_warehouse"
               type="text"
               disabled
               placeholder="Damaged Warehouse"
@@ -396,11 +388,7 @@
           <mat-form-field class="example-full-width">
             <input
               matInput
-              [value]="
-                warrantyObject?.replace_product?.length
-                  ? warrantyObject.replace_product[0]
-                  : ''
-              "
+              [value]="warrantyObject?.replace_product"
               type="text"
               disabled
               placeholder="Replaced Product"
@@ -411,11 +399,7 @@
           <mat-form-field class="example-full-width">
             <input
               matInput
-              [value]="
-                warrantyObject?.damage_product?.length
-                  ? warrantyObject.damage_product[0]
-                  : ''
-              "
+              [value]="warrantyObject?.damage_product"
               type="text"
               disabled
               placeholder="Damaged Product"
@@ -429,11 +413,7 @@
           <mat-form-field class="example-full-width">
             <input
               matInput
-              [value]="
-                warrantyObject?.replace_serial?.length
-                  ? warrantyObject.replace_serial[0]
-                  : ''
-              "
+              [value]="warrantyObject?.replace_serial"
               type="text"
               disabled
               placeholder="Replace Serial"
